--- a/_config.yml
+++ b/_config.yml
@@ -24,9 +24,9 @@ projects:
   limit: 9
   exclude:
     archived: false
-    forks: true
+    forks: false
     projects:
-    # - repo-name
+      - airadiology.github.io
 
 # social_media:
   # behance: your_username
